@@ -163,6 +163,8 @@ ccfilm.axv video/annodex oxo
 ccfilm.axv application/annodex xox
 test.ogg audio/ogg oxx
 test.ogg audio/x-vorbis+ogg x
+# Copied from http://bugzilla.gnome.org/show_bug.cgi?id=566661#c1
+msg0001.gsm audio/x-gsm oxo
 
 # other
 text.pdf application/pdf
