@@ -1,3 +1,9 @@
+2009-01-06  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in:
+	* tests/list:
+	* tests/msg0001.gsm: Add audio/x-gsm for GSM 06.10 encoded audio files
+
 2009-01-05  David Faure  <faure@kde.org>
 
 	* freedesktop.org.xml.in: Remove application/x-msi magic,
